src/main/java/Grammar.g4
grammar Grammar;

tokens { INDENT, DEDENT }

@lexer::members {
  // A queue where extra tokens are pushed on (see the NEWLINE lexer rule).
  private java.util.LinkedList<Token> tokens = new java.util.LinkedList<>();
  // The stack that keeps track of the indentation level.
  private java.util.Stack<Integer> indents = new java.util.Stack<>();
  // The amount of opened braces, brackets and parenthesis.
  private int opened = 0;
  // The most recently produced token.
  private Token lastToken = null;
  @Override
  public void emit(Token t) {
    super.setToken(t);
    tokens.offer(t);
  }

  @Override
  public Token nextToken() {
    // Check if the end-of-file is ahead and there are still some DEDENTS expected.
    if (_input.LA(1) == EOF && !this.indents.isEmpty()) {
      // Remove any trailing EOF tokens from our buffer.
      for (int i = tokens.size() - 1; i >= 0; i--) {
        if (tokens.get(i).getType() == EOF) {
          tokens.remove(i);
        }
      }

      // First emit an extra line break that serves as the end of the statement.
      this.emit(commonToken(GrammarParser.NEWLINE, "\n"));

      // Now emit as much DEDENT tokens as needed.
      while (!indents.isEmpty()) {
        this.emit(createDedent());
        indents.pop();
      }

      // Put the EOF back on the token stream.
      this.emit(commonToken(GrammarParser.EOF, "<EOF>"));
    }

    Token next = super.nextToken();

    if (next.getChannel() == Token.DEFAULT_CHANNEL) {
      // Keep track of the last token on the default channel.
      this.lastToken = next;
    }

    return tokens.isEmpty() ? next : tokens.poll();
  }

  private Token createDedent() {
    CommonToken dedent = commonToken(GrammarParser.DEDENT, "");
    dedent.setLine(this.lastToken.getLine());
    return dedent;
  }

  private CommonToken commonToken(int type, String text) {
    int stop = this.getCharIndex() - 1;
    int start = text.isEmpty() ? stop : stop - text.length() + 1;
    return new CommonToken(this._tokenFactorySourcePair, type, DEFAULT_TOKEN_CHANNEL, start, stop);
  }

  // Calculates the indentation of the provided spaces, taking the
  // following rules into account:
  //
  // "Tabs are replaced (from left to right) by one to eight spaces
  //  such that the total number of characters up to and including
  //  the replacement is a multiple of eight [...]"
  //
  //  -- https://docs.Grammar.org/3.1/reference/lexical_analysis.html#indentation
  static int getIndentationCount(String spaces) {
    int count = 0;
    for (char ch : spaces.toCharArray()) {
      switch (ch) {
        case '\t':
          count += 8 - (count % 8);
          break;
        default:
          // A normal space char.
          count++;
      }
    }

    return count;
  }

  boolean atStartOfInput() {
    return super.getCharPositionInLine() == 0 && super.getLine() == 1;
  }
}

//SPACE : [ \t\n\r]+ -> skip;
STRING : '"'(.)+?'"';
OPEN_CURLY_BRACKET : '{';
CLOSE_CURLY_BRACKET : '}';
OPEN_BRACKET : '(';
CLOSE_BRACKET : ')';
PRINT : 'Print';
VOID : 'Void';
LIST : 'List';
ELEMENT : 'Element';
COMMA : ',';
NAME : [a-z][a-zA-Z0-9]*;
NUMBER : [0-9]+;
ASSIGNMENT : '=';
FOR : 'For';
IS_EMPTY : 'IsEmpty';
CONTAINS : 'Contains';
IF : 'If';
ELSE : 'Else';
EQUAL : '==';
CLEAR : 'Clear';
ADD : 'Add';
GET : 'Get';
REMOVE : 'Remove';
SIZE : 'Size';
GE : '>=';
GT : '>';
LE : '<=';
LT : '<';
PLUS : '+';

SKIP_
 : ( SPACES | COMMENT | LINE_JOINING ) -> channel(HIDDEN)
 ;

fragment COMMENT
  : '//' ~[\r\n\f]*
  ;

fragment LINE_JOINING
 : '\\' SPACES? ( '\r'? '\n' | '\r' | '\f')
 ;

NEWLINE
 : ( {atStartOfInput()}?   SPACES
   | ( '\r'? '\n' | '\r' | '\f' ) SPACES?
   )
   {
     String newLine = getText().replaceAll("[^\r\n\f]+", "");
     String spaces = getText().replaceAll("[\r\n\f]+", "");
     int next = _input.LA(1);
     if (opened > 0 || next == '\r' || next == '\n' || next == '\f' || next == '#') {
       // If we're inside a list or on a blank line, ignore all indents,
       // dedents and line breaks.
       skip();
     }
     else {
       emit(commonToken(NEWLINE, newLine));
       int indent = getIndentationCount(spaces);
       int previous = indents.isEmpty() ? 0 : indents.peek();
       if (indent == previous) {
         // skip indents of the same size as the present indent-size
         skip();
       }
       else if (indent > previous) {
         indents.push(indent);
         emit(commonToken(GrammarParser.INDENT, spaces));
       }
       else {
         // Possibly emit more than 1 DEDENT token.
         while(!indents.isEmpty() && indents.peek() > indent) {
           this.emit(createDedent());
           indents.pop();
         }
       }
     }
   }
 ;

fragment SPACES
 : [ \t]+
 ;

//prog: (NEWLINE | block)* EOF;
program : (NEWLINE | content)* functionDefine* EOF;
block : NEWLINE INDENT (content NEWLINE)* DEDENT;
print : PRINT OPEN_BRACKET (STRING | NAME | size) CLOSE_BRACKET;
content : print | functionCall | forCycle | elementDeclaration | listDeclaration | ifBlock | add | clear | remove | concate;
type : LIST | ELEMENT;
functionDefine : VOID NAME OPEN_BRACKET type NAME (COMMA type NAME)* CLOSE_BRACKET block;
functionCall : NAME OPEN_BRACKET NAME (COMMA NAME)* CLOSE_BRACKET;
forCycle : FOR OPEN_BRACKET NAME COMMA NAME CLOSE_BRACKET block;
elementDeclaration : ELEMENT? NAME ASSIGNMENT (STRING | NAME | get);
listDeclaration : (LIST NAME) | (LIST? NAME ASSIGNMENT NAME);
equalNames : NAME EQUAL NAME;
contains : CONTAINS OPEN_BRACKET NAME COMMA NAME CLOSE_BRACKET;
is_empty : IS_EMPTY OPEN_BRACKET NAME CLOSE_BRACKET;
compare : equalNames | contains | is_empty | compareGE | compareGT | compareLE | compareLT | compareEQ;
ifBlock : IF OPEN_BRACKET compare CLOSE_BRACKET block elseBlock?;
elseBlock : ELSE block;
add : ADD OPEN_BRACKET NAME COMMA NAME CLOSE_BRACKET;
clear : CLEAR OPEN_BRACKET NAME CLOSE_BRACKET;
get : GET OPEN_BRACKET NAME COMMA NUMBER CLOSE_BRACKET;
remove : REMOVE OPEN_BRACKET NAME COMMA (NAME | NUMBER) CLOSE_BRACKET;
size : SIZE OPEN_BRACKET NAME CLOSE_BRACKET;
compareGE : size GE NUMBER;
compareGT : size GT NUMBER;
compareLE : size LE NUMBER;
compareLT : size LT NUMBER;
compareEQ : size EQUAL NUMBER;
concate : PLUS OPEN_BRACKET NAME COMMA NAME CLOSE_BRACKET;
